--- a/html/Store/store.html
+++ b/html/Store/store.html
@@ -756,31 +756,7 @@
                             </small>
                         </div>
                         <div class="mapbox">
-                            <!-- <style>
-                                .mapbox .root_daum_roughmap {
-                                    width: 100% !important;
-                                    height: 100% !important;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_map {
-                                    width: 100% !important;
-                                    height: 100% !important;
-                                }
-                                .mapbox .root_daum_roughmap svg {
-                                    display: none;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_btn_zoom {
-                                    right: unset;
-                                    left: 2.5%;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_controllers {
-                                    display: none !important;
-                                }
-                            </style> -->
                             <div id="map6"></div>
-                            <!-- <div
-                                id="daumRoughmapContainer1650337051699"
-                                class="root_daum_roughmap root_daum_roughmap_landing"
-                            ></div> -->
                         </div>
                     </div>
                 </div>
@@ -789,21 +765,6 @@
         <div class="popup-bg"></div>
     </body>
     <!--------------- 카카오 맵 api 자바스크립트 부분 --------------->
-    <!-- <script
-        charset="UTF-8"
-        class="daum_roughmap_loader_script"
-        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"
-    ></script>
-    <!-- 3. 실행 스크립트 -->
-    <script charset="UTF-8">
-        new daum.roughmap.Lander({
-            timestamp: "1650337051699",
-            key: "29vrc",
-            mapWidth: "530",
-            mapHeight: "300",
-        }).render();
-    </script>
-    -->
     <script
         type="text/javascript"
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f7ce88603e0054baaf1a5d1193a98451"
@@ -897,7 +858,7 @@
         };
         var map2 = new kakao.maps.Map(container2, options2);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.496579, 127.02634);
+        var markerPosition2 = new kakao.maps.LatLng(37.496579, 127.02634);
 
         var container3 = document.getElementById("map3");
         var options3 = {
@@ -906,7 +867,7 @@
         };
         var map3 = new kakao.maps.Map(container3, options3);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.498166, 127.054502);
+        var markerPosition3 = new kakao.maps.LatLng(37.498166, 127.054502);
 
         var container4 = document.getElementById("map4");
         var options4 = {
@@ -915,7 +876,7 @@
         };
         var map4 = new kakao.maps.Map(container4, options4);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.514005, 127.031981);
+        var markerPosition4 = new kakao.maps.LatLng(37.514005, 127.031981);
 
         var container5 = document.getElementById("map5");
         var options5 = {
@@ -924,7 +885,7 @@
         };
         var map5 = new kakao.maps.Map(container5, options5);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.492041, 127.014215);
+        var markerPosition5 = new kakao.maps.LatLng(37.492041, 127.014215);
 
         var container6 = document.getElementById("map6");
         var options6 = {
@@ -933,10 +894,27 @@
         };
         var map6 = new kakao.maps.Map(container6, options6);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.510039, 127.083296);
+        var markerPosition6 = new kakao.maps.LatLng(37.510039, 127.083296);
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            position: markerPosition2,
+        });
+        var marker = new kakao.maps.Marker({
+            position: markerPosition3,
+        });
+        var marker = new kakao.maps.Marker({
+            position: markerPosition4,
+        });
+        var marker = new kakao.maps.Marker({
+            position: markerPosition5,
+        });
+        var marker = new kakao.maps.Marker({
+            position: markerPosition6,
+        });
 
         // 마커가 지도 위에 표시되도록 설정
-        marker.setMap(map);
+        // marker.setMap(map);
         marker.setMap(map2);
         marker.setMap(map3);
         marker.setMap(map4);
@@ -949,11 +927,16 @@
         // ------------- 카카오 웹 api 자바스크립트 부분 끝 -------------
         // ------------- 팝업 스토어 시작 -------------
         $(function () {
+            // $(".btn-popup-store").click(function () {
+            //     $(".popup-store").fadeIn();
+            //     map.relayout();
+            //     map.setCenter(new kakao.maps.LatLng(37.496579, 127.02634));
+            // });
+
             $(".btn-popup-store").click(function () {
-                $(".popup-store").fadeIn();
-                map.relayout();
-                map.setCenter(new kakao.maps.LatLng(37.496579, 127.02634));
+                $(".popup-store").css("visibility", "visible");
             });
+
             $(
                 ".btn-popup-store, .btn-popup-store1, .btn-popup-store2, .btn-popup-store3, .btn-popup-store4"
             ).click(function () {
@@ -961,62 +944,66 @@
             });
 
             $(".btn-popup-store1").click(function () {
-                $(".popup-store1").fadeIn();
+                $(".popup-store1").css("visibility", "visible");
                 map.relayout();
             });
 
             $(".btn-popup-store2").click(function () {
-                $(".popup-store2").fadeIn();
+                $(".popup-store2").css("visibility", "visible");
                 map.relayout();
             });
 
             $(".btn-popup-store3").click(function () {
-                $(".popup-store3").fadeIn();
+                $(".popup-store3").css("visibility", "visible");
                 map.relayout();
             });
 
             $(".btn-popup-store4").click(function () {
-                $(".popup-store4").fadeIn();
+                $(".popup-store4").css("visibility", "visible");
                 map.relayout();
             });
 
             $(".btn-popup-close").click(function () {
-                $(".popup-store").fadeOut();
+                $(
+                    ".popup-store, .popup-store1, .popup-store2, .popup-store3 ,.popup-store4"
+                ).css("visibility", "hidden");
             });
+            // $(".btn-popup-close").click(function () {
+            //     $(".popup-store1").fadeOut();
+            // });
+            // $(".btn-popup-close").click(function () {
+            //     $(".popup-store2").fadeOut();
+            // });
+            // $(".btn-popup-close").click(function () {
+            //     $(".popup-store3").fadeOut();
+            // });
+            // $(".btn-popup-close").click(function () {
+            //     $(".popup-store4").fadeOut();
+            // });
             $(".btn-popup-close").click(function () {
-                $(".popup-store1").fadeOut();
-            });
-            $(".btn-popup-close").click(function () {
-                $(".popup-store2").fadeOut();
-            });
-            $(".btn-popup-close").click(function () {
-                $(".popup-store3").fadeOut();
-            });
-            $(".btn-popup-close").click(function () {
-                $(".popup-store4").fadeOut();
+                $(".popup-bg").fadeOut();
             });
 
-            $(".btn-popup-close").click(function () {
-                $(".popup-bg").fadeOut();
-            });
             $(".popup-bg").click(function () {
                 $(".popup-bg").fadeOut();
             });
             $(".popup-bg").click(function () {
-                $(".popup-store").fadeOut();
+                $(
+                    ".popup-store, .popup-store1, .popup-store2, .popup-store3, .popup-store4"
+                ).css("visibility", "hidden");
             });
-            $(".popup-bg").click(function () {
-                $(".popup-store1").fadeOut();
-            });
-            $(".popup-bg").click(function () {
-                $(".popup-store2").fadeOut();
-            });
-            $(".popup-bg").click(function () {
-                $(".popup-store3").fadeOut();
-            });
-            $(".popup-bg").click(function () {
-                $(".popup-store4").fadeOut();
-            });
+            // $(".popup-bg").click(function () {
+            //     $(".popup-store1").fadeOut();
+            // });
+            // $(".popup-bg").click(function () {
+            //     $(".popup-store2").fadeOut();
+            // });
+            // $(".popup-bg").click(function () {
+            //     $(".popup-store3").fadeOut();
+            // });
+            // $(".popup-bg").click(function () {
+            //     $(".popup-store4").fadeOut();
+            // });
         });
         // map.relayout();
     </script>
